SFDCProject/src/objects/Phase__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Age__c</fullName>
        <formula>IF( Phase_Status__c = &quot;Open&quot;, (Today() -  Start_Date__c ) +1,
IF( Phase_Status__c = &quot;Complete&quot;, ( End_Date__c  -  Start_Date__c ) +1,
IF( ISPICKVAL( Project__r.Status__c , &quot;Cancelled&quot;), ( Project__r.End_Date__c  - Start_Date__c ) +1,
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_Number__c</fullName>
        <label>Phase Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Status__c</fullName>
        <label>Phase Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <formula>IF(Phase_Number__c = &quot;1&quot;, &quot;1-Project Initiation&quot;, IF(Phase_Number__c = &quot;2&quot;, &quot;2-Contract Approval&quot;, 
IF(Phase_Number__c = &quot;3&quot;, &quot;3-Site Audit&quot;, IF(Phase_Number__c = &quot;4&quot;, &quot;4-Design&quot;, 
IF(Phase_Number__c = &quot;5&quot;, &quot;5-Pre-Installation Approvals&quot;, IF(Phase_Number__c = &quot;6&quot;, &quot;6-Installation&quot;, 
IF(Phase_Number__c = &quot;7&quot;, &quot;7-Completion&quot;, &quot;None&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Phases</relationshipLabel>
        <relationshipName>Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Phase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>